crates/abi/tests/ui/type.stderr
error: empty tuples are not allowed
   --> tests/ui/type.rs:144:9
    |
144 |         () t;
    |         ^^

error: single element tuples must have a trailing comma
   --> tests/ui/type.rs:150:14
    |
150 |         (bool) t;
    |              ^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:156:9
    |
156 |         bytes0 a;
    |         ^^^^^^

error: fixed bytes range is 1-32
   --> tests/ui/type.rs:162:9
    |
162 |         bytes33 a;
    |         ^^^^^^^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:168:9
    |
168 |         uint0 a;
    |         ^^^^^

error: uintX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:174:9
    |
174 |         uint264 a;
    |         ^^^^^^^

error: uintX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:180:9
    |
180 |         uint7 a;
    |         ^^^^^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:186:9
    |
186 |         int0 a;
    |         ^^^^

error: intX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:192:9
    |
192 |         int264 a;
    |         ^^^^^^

error: intX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:198:9
    |
198 |         int7 a;
    |         ^^^^

error[E0412]: cannot find type `bytes_` in this scope
   --> tests/ui/type.rs:204:9
    |
204 |         bytes_ a;
    |         ^^^^^^ not found in this scope

error[E0412]: cannot find type `bytes_32` in this scope
   --> tests/ui/type.rs:205:9
    |
205 |         bytes_32 b;
    |         ^^^^^^^^ not found in this scope

error[E0412]: cannot find type `uint_` in this scope
   --> tests/ui/type.rs:206:9
    |
206 |         uint_ c;
    |         ^^^^^ not found in this scope

error[E0412]: cannot find type `uint_256` in this scope
   --> tests/ui/type.rs:207:9
    |
207 |         uint_256 d;
    |         ^^^^^^^^ not found in this scope

error[E0412]: cannot find type `int_` in this scope
   --> tests/ui/type.rs:208:9
    |
208 |         int_ e;
    |         ^^^^ not found in this scope

error[E0412]: cannot find type `int_256` in this scope
   --> tests/ui/type.rs:209:9
    |
209 |         int_256 f;
    |         ^^^^^^^ not found in this scope

error[E0277]: the trait bound `(ethers_abi_enc::sol_data::String, Bool, Address, ethers_abi_enc::sol_data::Bytes, FixedBytes<1>, FixedBytes<2>, FixedBytes<3>, FixedBytes<4>, FixedBytes<5>, FixedBytes<6>, FixedBytes<7>, FixedBytes<8>, FixedBytes<9>, FixedBytes<10>, FixedBytes<11>, FixedBytes<12>, FixedBytes<13>, FixedBytes<14>, FixedBytes<15>, FixedBytes<16>, FixedBytes<17>, FixedBytes<18>, FixedBytes<19>, FixedBytes<20>, FixedBytes<21>, FixedBytes<22>, FixedBytes<23>, FixedBytes<24>, FixedBytes<25>, FixedBytes<26>, FixedBytes<27>, FixedBytes<28>, FixedBytes<29>, FixedBytes<30>, FixedBytes<31>, FixedBytes<32>, Int<256>, Int<8>, Int<16>, Int<24>, Int<32>, Int<40>, Int<48>, Int<56>, Int<64>, Int<72>, Int<80>, Int<88>, Int<96>, Int<104>, Int<112>, Int<120>, Int<128>, Int<136>, Int<144>, Int<152>, Int<160>, Int<168>, Int<176>, Int<184>, Int<192>, Int<200>, Int<208>, Int<216>, Int<224>, Int<232>, Int<240>, Int<248>, Int<256>, Uint<256>, Uint<8>, Uint<16>, Uint<24>, Uint<32>, Uint<40>, Uint<48>, Uint<56>, Uint<64>, Uint<72>, Uint<80>, Uint<88>, Uint<96>, Uint<104>, Uint<112>, Uint<120>, Uint<128>, Uint<136>, Uint<144>, Uint<152>, Uint<160>, Uint<168>, Uint<176>, Uint<184>, Uint<192>, Uint<200>, Uint<208>, Uint<216>, Uint<224>, Uint<232>, Uint<240>, Uint<248>, Uint<256>): SolStruct` is not satisfied
   --> tests/ui/type.rs:3:1
    |
3   | / sol! {
4   | |     struct BuiltinTypes {
5   | |         string s;
6   | |         bool b;
...   |
110 | |     }
111 | | }
    | |_^ the trait `SolStruct` is not implemented for `(ethers_abi_enc::sol_data::String, Bool, Address, ethers_abi_enc::sol_data::Bytes, FixedBytes<1>, FixedBytes<2>, FixedBytes<3>, FixedBytes<4>, FixedBytes<5>, FixedBytes<6>, FixedBytes<7>, FixedBytes<8>, FixedBytes<9>, FixedBytes<10>, FixedBytes<11>, FixedBytes<12>, FixedBytes<13>, FixedBytes<14>, FixedBytes<15>, FixedBytes<16>, FixedBytes<17>, FixedBytes<18>, FixedBytes<19>, FixedBytes<20>, FixedBytes<21>, FixedBytes<22>, FixedBytes<23>, FixedBytes<24>, FixedBytes<25>, FixedBytes<26>, FixedBytes<27>, FixedBytes<28>, FixedBytes<29>, FixedBytes<30>, FixedBytes<31>, FixedBytes<32>, Int<256>, Int<8>, Int<16>, Int<24>, Int<32>, Int<40>, Int<48>, Int<56>, Int<64>, Int<72>, Int<80>, Int<88>, Int<96>, Int<104>, Int<112>, Int<120>, Int<128>, Int<136>, Int<144>, Int<152>, Int<160>, Int<168>, Int<176>, Int<184>, Int<192>, Int<200>, Int<208>, Int<216>, Int<224>, Int<232>, Int<240>, Int<248>, Int<256>, Uint<256>, Uint<8>, Uint<16>, Uint<24>, Uint<32>, Uint<40>, Uint<48>, Uint<56>, Uint<64>, Uint<72>, Uint<80>, Uint<88>, Uint<96>, Uint<104>, Uint<112>, Uint<120>, Uint<128>, Uint<136>, Uint<144>, Uint<152>, Uint<160>, Uint<168>, Uint<176>, Uint<184>, Uint<192>, Uint<200>, Uint<208>, Uint<216>, Uint<224>, Uint<232>, Uint<240>, Uint<248>, Uint<256>)`
    |
    = help: the following other types implement trait `SolStruct`:
              ArrayTypes
              BuiltinTypes
              CustomTypes
              TupleTypes
    = note: required for `(String, ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...)` to implement `SolType`
    = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)
